Get the basic examples working for each function.
This involves adding a function to spin up a new gobbler service in the
background of the R session, to avoid relying on any external gobbler
instance. We also add the various remove* functions and utilities.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,13 @@ export(listVersions)
 export(refreshLatest)
 export(refreshUsage)
 export(rejectProbation)
+export(removeAsset)
+export(removeProject)
+export(removeVersion)
 export(setPermissions)
+export(startGobbler)
+export(stopGobbler)
 export(uploadDirectory)
 export(versionPath)
-importFrom(aws.s3,get_bucket)
 importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
