Cleanups to imports, docs to pass R CMD CHECK.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,4 @@ export(uploadDirectory)
 export(versionPath)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(utils,download.file)
