Updates to align with the latest version of the API.
In particular, creation of new projects is now an administrator task.
Uploads can only be performed to existing projects. This aligns with the
gypsum philosophy and is necessary to have more control over disk usage.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(allocateUploadDirectory)
 export(approveProbation)
 export(checkHealth)
 export(cloneVersion)
+export(createProject)
 export(fetchLatest)
 export(fetchManifest)
 export(fetchPermissions)
