More updates to align with the latest version of the API.
Every request to the API now requires an explicit notification via a
POST, instead of just waiting for it to be picked up via filesystem
events; this is more reliable on complicated network shares.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(startGobbler)
 export(stopGobbler)
 export(uploadDirectory)
 export(versionPath)
+import(httr2)
+import(methods)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(utils,download.file)
