--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gobbler
-Version: 0.2.0
-Date: 2024-04-09
+Version: 0.3.0
+Date: 2024-04-10
 Title: Interface to the gobbler service
 Description:
     Friendly interface to the gobbler service.
@@ -9,7 +9,9 @@ Authors@R: person("Aaron", "Lun", role=c("aut", "cre"), email="infinite.monkeys.
 License: MIT + file LICENSE
 Imports:
     utils,
-    jsonlite
+    methods,
+    jsonlite,
+    httr2
 Suggests:
     knitr,
     rmarkdown,
