Added remote capabilities for all read-only functions.
This enables access to registry contents from remote applications, with
appropriate caching on the filesystem of the caller. It does so by
hitting the new /fetch and /list endpoints of Gobbler 0.3.1.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(approveProbation)
 export(checkHealth)
 export(cloneVersion)
 export(createProject)
+export(fetchDirectory)
 export(fetchLatest)
 export(fetchManifest)
 export(fetchPermissions)
@@ -29,4 +30,5 @@ import(httr2)
 import(methods)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(utils,URLencode)
 importFrom(utils,download.file)
