--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gobbler
-Version: 0.3.1
-Date: 2024-04-10
+Version: 0.3.2
+Date: 2024-04-11
 Title: Interface to the gobbler service
 Description:
     Friendly interface to the gobbler service.
@@ -10,6 +10,7 @@ License: MIT + file LICENSE
 Imports:
     utils,
     methods,
+    tools,
     jsonlite,
     httr2
 Suggests:
