Switch from a soy healthcheck to a chad /info endpoint.
The latter is lightweight but actually useful outside of a healthcheck.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(allocateUploadDirectory)
 export(approveProbation)
-export(checkHealth)
 export(cloneVersion)
 export(createProject)
 export(fetchDirectory)
@@ -21,6 +20,7 @@ export(rejectProbation)
 export(removeAsset)
 export(removeProject)
 export(removeVersion)
+export(serviceInfo)
 export(setPermissions)
 export(startGobbler)
 export(stopGobbler)
