Implement utility to fetch individual files from the registry.
Avoids having to download an entire subdirectory to get what we want.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(approveProbation)
 export(cloneVersion)
 export(createProject)
 export(fetchDirectory)
+export(fetchFile)
 export(fetchLatest)
 export(fetchManifest)
 export(fetchPermissions)
