--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gobbler
-Version: 0.3.4
-Date: 2024-04-24
+Version: 0.3.5
+Date: 2024-08-27
 Title: Interface to the gobbler service
 Description:
     Friendly interface to the gobbler service.
@@ -19,7 +19,8 @@ Suggests:
     rmarkdown,
     testthat,
     BiocStyle
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
+Encoding: UTF-8
 VignetteBuilder: knitr
 URL: https://github.com/ArtifactDB/gobbler-R
 BugReports: https://github.com/ArtifactDB/gobbler-R/issues
