Preserve relative links within the upload directory.
This matches a corresponding update to the gobbler backend and allows users to
explicitly deduplicate their uploads when they need to store the same file
multiple times, e.g., for delayed arrays with shared seeds.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,3 +33,4 @@ importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(utils,URLencode)
 importFrom(utils,download.file)
+importFrom(utils,head)
