Added utility to unpack a Gobbler path to its project/asset/version details.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(serviceInfo)
 export(setPermissions)
 export(startGobbler)
 export(stopGobbler)
+export(unpackPath)
 export(uploadDirectory)
 export(versionPath)
 import(httr2)
@@ -34,3 +35,4 @@ importFrom(jsonlite,toJSON)
 importFrom(utils,URLencode)
 importFrom(utils,download.file)
 importFrom(utils,head)
+importFrom(utils,tail)
