Added reindexVersion function for the latest gobbler API.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(listProjects)
 export(listVersions)
 export(refreshLatest)
 export(refreshUsage)
+export(reindexVersion)
 export(rejectProbation)
 export(removeAsset)
 export(removeProject)
