Added bindings for rerouting links prior to deletion.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(rejectProbation)
 export(removeAsset)
 export(removeProject)
 export(removeVersion)
+export(rerouteLinks)
 export(serviceInfo)
 export(setPermissions)
 export(startGobbler)
