Added bindings for validating a version directory.
Also updated the required version of the Gobbler API.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(startGobbler)
 export(stopGobbler)
 export(unpackPath)
 export(uploadDirectory)
+export(validateVersion)
 export(versionPath)
 import(httr2)
 import(methods)
